--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <li>釋放工作的壓力</li>
         <li>增加肌肉助於減肥</li>
     </ol>
+    <img src="images/pic-1.jpg" alt="pic-1.jpg" width="32%">
+    <img src="images/pic-2.jpg" alt="pic-2.jpg" width="32%">
+    <img src="images/pic-3.jpg" alt="pic-3.jpg" width="32%">
     <hr>
     <h2>好文章連結</h2>
     <li>
@@ -101,6 +104,25 @@
             </tr>
         </tbody>
     </table>
-
-
+    <p>
+        <b>
+            <a href="bmi.html" target="_blank">計算BMI:</a>
+        </b>&nbsp;&nbsp;一位民眾身高160公分，體重65公斤，BMI25.4kg/m2(=65÷1.6÷1.6)，體重屬於「過重」。<br>
+        <b>計算所需熱量:</b>&nbsp;&nbsp;
+        因他的工作為坐辦公室，屬輕量工作，每天攝取熱量應在1300至1625大卡之間(=20~25大卡*65公斤)。
+    </p>
 </body>
+<hr>
+<h2>影片介紹</h2>
+<iframe width="45%" height="534" src="https://www.youtube.com/embed/MzLZXUnekuI"
+    title="健身房新手【4天練全身課表】每天只做CP值最高的三個精華動作！│健人訓練│ 2021ep31" frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen></iframe>
+<iframe width="45%" height="534" src="https://www.youtube.com/embed/Vb287LMSwlw"
+    title="30分鐘爆汗燃脂+核心訓練│無須器材、無跳躍、不傷手腕│跟著我甩掉多餘體脂肪！30 Min Athome fat burn, no equipment needed, no jumping"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+    allowfullscreen></iframe>
+<hr>
+
+</html>
