1.增加form 2.增加bmi.html

--- a/index.html
+++ b/index.html
@@ -106,9 +106,11 @@
     </table>
     <p>
         <b>
-            <a href="bmi.html" target="_blank">計算BMI:</a>
-        </b>&nbsp;&nbsp;一位民眾身高160公分，體重65公斤，BMI25.4kg/m2(=65÷1.6÷1.6)，體重屬於「過重」。<br>
-        <b>計算所需熱量:</b>&nbsp;&nbsp;
+            <a href="bmi.html">計算BMI:</a>
+
+        </b>
+        一位民眾身高160公分，體重65公斤，BMI25.4kg/m2(=65÷1.6÷1.6)，體重屬於「過重」。<br>
+        <b>計算所需熱量:</b>
         因他的工作為坐辦公室，屬輕量工作，每天攝取熱量應在1300至1625大卡之間(=20~25大卡*65公斤)。
     </p>
 </body>
@@ -123,6 +125,22 @@
     frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     allowfullscreen></iframe>
+
+
+
 <hr>
+<h2>表單填寫</h2>
+<form action="">
+    <label for="email">帳號</label>
+    <input type="email" id="email" name="email">
+    <br>
+    <label for="password">密碼</label>
+    <input type="password" id="password" name="password">
+    <input type="file">
+
+    <p>
+        <button type="submit">提交</button>
+    </p>
+</form>
 
 </html>
