--- a/index.html
+++ b/index.html
@@ -6,28 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>健身網站</title>
+
+    <style>
+        body {
+            background-color: #146C94;
+            color: rgb(255, 255, 255);
+            font-family: 標楷體;
+        }
+
+        .sub-title {
+            background-color: #e6e6fa;
+            color: #146C94;
+            font-size: 24px;
+        }
+    </style>
+
 </head>
 
 <body>
-    <h1>何謂健身?</h1>
-    <p>
-        <b>
-            健身，英文稱為workout，健身這兩個字拆開來的意思就是健康身體，通過各種運動方式或方法來增強力量、
-            增加肌肉量、柔韌性、耐力，以及提高協調和控制身體各部分的能力來使我們的身體更強健。
-            除了塑造好身材，透過健身可以刺激我們身體的肌肉，再搭配飲食的控制，這能大大幫助我們的肌肉量增加，
-            以及讓我們的肌肉更加的結實。
-        </b>
-    </p>
-    <p>
-        如果你對健身仍然保持著懷疑的態度，那你大可以去看看你喜歡的健身老戲骨幹，<em>他們是如何做到年過50/60歲</em>，
-        依舊在舞臺上或者是電影螢幕上綻放光彩。答案就是
-        <b>
-            <u>堅持運動健身!</u>
-        </b>
-    </p>
+    <!-- 註解區 -->
+    <h1 style="color: rgb(14, 5, 92);background-color: #e6e6fa;">何謂健身?</h1>
+    <div style="background-color : white;
+    font-family: 微軟正黑體;">
+        <h3>
+            健身，英文稱為workout，健身這兩個字拆開來的意思就是健康身體，通過各種運動方式或方法來增強力量、增加肌肉量、柔韌性、耐力，以及提高協調和控制身體各部分的能力來使我們的身體更強健。
+        </h3>
+        <p style="font-size:medium;color: black;">
+            除了塑造好身材，透過健身可以刺激我們身體的肌肉，再搭配飲食的控制，這能大大幫助我們的肌肉量增加，以及讓我們的肌肉更加的結實。
 
+        </p>
+    </div>
+    <p>
+        <em>如果你對健身仍然保持著懷疑的態度，那你大可以去看看你喜歡的健身老戲骨幹，他們是如何做到年過50/60歲，依舊在
+            舞臺上或者是電影螢幕上綻放光彩。</em><br><b><u>答案就是堅持<span style="background-color: lightgreen;
+            font-size: larger;">運動健身!</span></u></b>
+    </p>
     <hr>
-    <h2>&spades; 健身的10個好處</h2>
+    <div class="sub-title">健身的10個好處</div>
     <ol type="1">
         <li>增加基礎代謝率</li>
         <li>預防疾病和提高免疫力</li>
@@ -44,7 +59,7 @@
     <img src="images/pic-2.jpg" alt="pic-2.jpg" width="32%">
     <img src="images/pic-3.jpg" alt="pic-3.jpg" width="32%">
     <hr>
-    <h2>好文章連結</h2>
+    <div class="sub-title">好文章連結</div>
     <li>
         <a href="https://www.fe-amart.com.tw/index.php/life-style/life-info/secret-recipe/hero-6" target="_blank">
             健身初學者必看！10個常見的健身迷思
@@ -72,7 +87,7 @@
         <a target="_blank" href="https://fitnesstwenty.com/benefits-of-workout/">
             https://fitnesstwenty.com/benefits-of-workout/</a></small>節錄至
     <hr>
-    <h2>一天所需卡路里</h2>
+    <div class="sub-title">一天所需卡路里</div>
     <table border="2">
         <thead>
             <tr>
@@ -115,7 +130,7 @@
     </p>
 </body>
 <hr>
-<h2>影片介紹</h2>
+<div class="sub-title">影片介紹</div>
 <iframe width="45%" height="534" src="https://www.youtube.com/embed/MzLZXUnekuI"
     title="健身房新手【4天練全身課表】每天只做CP值最高的三個精華動作！│健人訓練│ 2021ep31" frameborder="0"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
