--- a/bmi.html
+++ b/bmi.html
@@ -5,24 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>計算BMI</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <h1>BMI計算機</h1>
-    <form action="">
-        <label for="name">姓名</label>
-        <input type="text" id="name" name="name">
-        <br>
-        <label for="height">身高</label>
-        <input type="number" id="height" name="name">
-        <br>
-        <label for="weight">體重</label>
-        <input type="number" id="weight" name="name">
-        <p>
-            <button type="submit">計算</button>
-        </p>
-    </form>
-    <a href="index.html">回首頁</a>
+    <div id="container">
+        <div class="sub-title">BMI計算機</div>
+        <form action="">
+            <label for="name">姓名</label>
+            <input type="text" id="name" name="name">
+            <br>
+            <label for="height">身高</label>
+            <input type="number" id="height" name="name">
+            <br>
+            <label for="weight">體重</label>
+            <input type="number" id="weight" name="name">
+            <p>
+                <button type="submit">計算</button>
+            </p>
+        </form>
+        <a href="index.html">回首頁</a>
+    </div>
 </body>
 
 </html>
