--- a/bmi.html
+++ b/bmi.html
@@ -21,11 +21,17 @@
             <label for="weight">體重</label>
             <input type="number" id="weight" name="name">
             <p>
-                <button type="submit">計算</button>
+                <button type="button" onclick="calc()">計算</button>
+                <button type="reset">清除</button>
+            </p>
+            <p>
+                BMI:<span class="bmi"></span>
+
             </p>
         </form>
         <a href="index.html">回首頁</a>
     </div>
+    <script src="./js/bmi.js"></script>
 </body>
 
 </html>
